refactoring, tidy up, modernisation of code